[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/NineteenNinetySix-improved.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://inventory/InventoryDialog.gd" type="Script" id=2]
[ext_resource path="res://inventory/InventoryGrid.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/WoodPanelRect.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[node name="InventoryDialog" type="Control"]
margin_right = 115.0
margin_bottom = 89.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WoodPanelRect" parent="." instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="TitleText" type="Label" parent="."]
margin_left = 4.0
margin_top = 3.0
margin_right = 66.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.560784, 0.337255, 0.231373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionText" type="Label" parent="."]
margin_left = 4.0
margin_top = 12.0
margin_right = 210.0
margin_bottom = 21.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Description..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomArea" type="Control" parent="."]
margin_left = 1.0
margin_top = 19.0
margin_right = 114.0
margin_bottom = 88.0

[node name="InventoryGrid" parent="BottomArea" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.5
margin_top = -33.5
margin_right = 33.5
margin_bottom = 33.5
